0.8.9:
	
2004-11-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.[h|cc]: Override Bakery::App::init_menus_file to 
	remove useless Save and Save-As menu items.
	offer_new_or_existing(): Prefix new databases with glom_. The whole 
	name could maybe be autogenerated in future. Start with an unprefixed 
	name based on the filename.
	Offer a database name and title based on the filename.
	* glom/Document/document_glom.[h|cc]: Added get/set_database_title(), and 
	save/load it in save_before() and load_after().
	* configure.in: Depend on bakery 2.3.9 because we need the new 
	behaviour of Bakery::Document::get_name() for the default database 
	name. Increase version.

2004-11-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/: Added dialog_new_database.[h|cc], to request database name 
	and title.
	* glom/: Added dialog_connection.[h|cc]: to replace 
	glom/navigation/box_databases.[h|cc].
	* glom/frame.[h|cc]: Added create_database().
	* glom/application.[h|cc]: Ask for a new database name when creating 
	new documents, and do not allow the user to navigate to a different 
	database.
	* glom/glom.glade: UI for the 2 new dialogs.

2004-11-17  Murray Cumming  <murrayc@murrayc.com>

	* utility_widgets/Makefile.am: Use noinst_PROGRAMS instead of 
	bin_PROGRAMS so that my little test does not get installed.

2004-11-14  Murray Cumming  <murrayc@murrayc.com>

	* utility_widgets/flowtable.[h|cc]: Draw some simple dotted lines 
	between the items to make the design mode look different than the data 
	mode.
	* mode_data/box_data_details.[h|cc]: Override on_userlevel_changed() 
	to call FlowTable::set_design_mode(), to show or hide the lines. This 
	doesn't quite work - it draws more lines immediately after switching 
	to developer mode, but less when just switching tabs.
	* Document_Glom::get_table_info_with_add(): Set the table name of the 
	new info when it adds, so that we actually remember new tables.

2004-11-06  Amanpreet Singh Alam <aalam@redhat.com>
