@@ -43,7 +43,7 @@ namespace GlomConversions
 
   bool value_is_empty(const Gnome::Gda::Value& value);
   Gnome::Gda::Value get_empty_value(Field::glom_field_type field_type);
-};
+}
 
 #endif //GLOM_DATASTRUCTURE_GLOMCONVERSIONS_H
 
