@@ -47,7 +47,7 @@ Box_Data_Details::Box_Data_Details(bool bWithNavButtons /* = true */)
     if(dialog)
     {
       m_pDialogLayout = dialog;
-      m_pDialogLayout->signal_hide().connect( sigc::mem_fun(*this, &Box_Data::on_dialog_layout_hide) );
+      m_pDialogLayout->signal_hide().connect( sigc::mem_fun(static_cast<Box_Data&>(*this), &Box_Data::on_dialog_layout_hide) );
     }
   }
   
