@@ -1,4 +1,9 @@
-0.8.9:
+2004-11-28  Murray Cumming  <murrayc@murrayc.com>
+
+	* glom/data_structure/connection_pool.[h|cc]: Added get/set_database() 
+	because postgres seems to need this specified at connection time.
+	* glom/dialog_connection.cc: Use ConnectionPool::set_database().
+	* Removed several extra ;s that g++ 3.4 complains about.
 	
 2004-11-21  Murray Cumming  <murrayc@murrayc.com>
 
